--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@
 	.title {
 		height:80vh;
 		color:white;
-		background-image: url("images/sunset.jpeg");
+		background-image: url("images/bg.jpeg");
 		
 		background-position: center center;
 		background-size: cover;
