--- a/projectStyle.css
+++ b/projectStyle.css
@@ -10,6 +10,7 @@
 		background-color: #131313;
 		color:  white;
 		min-height:  100vh;
+		padding-bottom: 370px;
 	}
 	nav	{
 		background-color:black;
