--- a/style.css
+++ b/style.css
@@ -25,6 +25,35 @@
 		top:  0px;
 	}
 
+	.centerCont {
+		text-align: center
+	}
+	
+	.button {
+		border: none;
+		color: white;
+		padding: 16px 32px;
+		text-align: center;
+		text-decoration: none;
+		display: inline-block;
+		font-size: 16px;
+		transition-duration: 0.4s;
+		cursor: pointer;
+		margin-left: 80px;
+		margin-right: 100px;
+		margin-top: 25px
+	  }
+	  
+	  .button1 {
+		background-color: white; 
+		color: black; 
+	  }
+	  
+	  .button1:hover {
+		background-color: gray;
+		color: white;
+	  }
+
 	nav h3 {
 		color:  white;
 	}
