--- a/projectStyle.css
+++ b/projectStyle.css
@@ -251,9 +251,14 @@
 	  display: grid;
 	  grid-template-columns: repeat(3, 1fr);
 	  gap: 10px;
-	  grid-column-gap: 30px;
+	  grid-column-gap: 100px;
 	  grid-row-gap: 300px;
 	  grid-auto-rows: 100px;
+	}
+
+	.text p {
+		align: right;
+		font-size: 100;
 	}
 
 	a{
